# faktura

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  MIGRATION.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  validator.yml
benches/: BASELINE.md  invoice_bench.rs
examples/: basic_invoice.rs  datev_export.rs  error_handling.rs  gdpdu_export.rs  peppol_invoice.rs  validation.rs  vat_check.rs  xrechnung.rs  zugferd.rs
fuzz/: Cargo.toml  FINDINGS.md  README.md
fuzz/fuzz_targets/: fuzz_cii_parse.rs  fuzz_cii_roundtrip.rs  fuzz_ubl_parse.rs  fuzz_ubl_roundtrip.rs  fuzz_xml_autodetect.rs  fuzz_zugferd_extract.rs
src/: lib.rs
src/core/: builder.rs  countries.rs  currencies.rs  error.rs  mod.rs  numbering.rs  reason_codes.rs  types.rs  units.rs  validation.rs
src/datev/: accounts.rs  bu_key.rs  extf.rs  mod.rs
src/gdpdu/: csv_export.rs  gdpdu-01-08-2002.dtd  index_xml.rs  mod.rs
src/peppol/: eas.rs  mod.rs  validate.rs
src/vat/: format.rs  kleinunternehmer.rs  mod.rs  scenario.rs  vies.rs
src/xrechnung/: cii.rs  mod.rs  ubl.rs  validate.rs  xml_utils.rs
src/zugferd/: embed.rs  extract.rs  mod.rs  profile.rs  xmp.rs
tests/: core_tests.rs  datev_pdf_extraction_tests.rs  datev_tests.rs  edge_case_tests.rs  gdpdu_tests.rs  kosit_testsuite.rs  peppol_tests.rs  proptest_tests.rs  validator_tests.rs  vat_tests.rs  xrechnung_tests.rs  zugferd_reference_tests.rs  zugferd_tests.rs
tests/fixtures/xrechnung-testsuite/extension/: 04.01a-INVOICE_ubl.xml  04.02a-INVOICE_ubl.xml  04.03a-INVOICE_ubl.xml  04.04a-INVOICE_ubl.xml  04.05a-INVOICE_uncefact.xml  05.01a-INVOICE_ubl.xml
tests/fixtures/xrechnung-testsuite/standard/: 01.04a-INVOICE_ubl.xml  01.05a-INVOICE_ubl.xml  01.06a-INVOICE_ubl.xml  01.07a-INVOICE_ubl.xml  01.08a-INVOICE_ubl.xml  01.09a-INVOICE_ubl.xml  01.10a-INVOICE_ubl.xml  01.11a-INVOICE_ubl.xml  01.12a-INVOICE_ubl.xml  01.13a-INVOICE_ubl.xml  01.14a-INVOICE_ubl.xml  01.15a-INVOICE_ubl.xml  01.17a-INVOICE_ubl.xml  01.18a-INVOICE_ubl.xml  01.19a-INVOICE_ubl.xml  01.20a-INVOICE_ubl.xml  01.21a-INVOICE_ubl.xml  01.21a-INVOICE_uncefact.xml  02.01a-INVOICE_ubl.xml  02.01a-INVOICE_uncefact.xml  02.02a-INVOICE_ubl.xml  02.02a-INVOICE_uncefact.xml  02.03a-INVOICE_ubl.xml  02.03a-INVOICE_uncefact.xml  02.04a-INVOICE_ubl.xml  02.04a-INVOICE_uncefact.xml  02.05a-INVOICE_ubl.xml  02.05a-INVOICE_uncefact.xml  02.06a-INVOICE_ubl.xml  02.06a-INVOICE_uncefact.xml  03.01a-INVOICE_ubl.xml  03.01a-INVOICE_uncefact.xml  03.02a-INVOICE_ubl.xml  03.02a-INVOICE_uncefact.xml  03.03a-INVOICE_ubl.xml  03.03a-INVOICE_uncefact.xml  03.04a-INVOICE_ubl.xml  03.04a-INVOICE_uncefact.xml  03.05a-INVOICE_ubl.xml  03.05a-INVOICE_uncefact.xml  (+2 more)
tests/fixtures/xrechnung-testsuite/technical-cases/cius/: 01.01_comprehensive_test_ubl.xml  01.01_comprehensive_test_uncefact.xml  01.02_comprehensive_test_ubl.xml  01.02_comprehensive_test_uncefact.xml  01.03_comprehensive_test_ubl.xml  01.03_comprehensive_test_uncefact.xml  01.04_comprehensive_test_ubl.xml  01.04_comprehensive_test_uncefact.xml  01.05_minimal_test_ubl.xml  01.05_minimal_test_uncefact.xml  01.06_minimal_test_ubl.xml  01.06_minimal_test_uncefact.xml
tests/fixtures/xrechnung-testsuite/technical-cases/cvd/: 02.01a-cvd_INVOICE_ubl.xml  02.01a-cvd_INVOICE_uncefact.xml
tests/snapshots/: xrechnung_tests__cii_domestic_invoice.snap  xrechnung_tests__ubl_domestic_invoice.snap
