[package]
name = "faktura"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "Comprehensive German e-invoicing library — XRechnung, ZUGFeRD, DATEV, GDPdU, VAT, Peppol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cvrt-gmbh/faktura"
keywords = ["invoice", "xrechnung", "zugferd", "datev", "german"]
categories = ["finance", "encoding"]

[features]
default = ["core"]
core = []
xrechnung = ["core", "dep:quick-xml"]
zugferd = ["core", "xrechnung", "dep:lopdf"]
datev = ["core"]
gdpdu = ["core", "dep:quick-xml"]
vat = ["core", "dep:reqwest", "dep:serde_json"]
peppol = ["core", "xrechnung"]
all = ["core", "xrechnung", "zugferd", "datev", "gdpdu", "vat", "peppol"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

# Optional dependencies
quick-xml = { version = "0.37", features = ["serialize"], optional = true }
lopdf = { version = "0.39", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1", features = ["yaml"] }
proptest = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[[example]]
name = "basic_invoice"
required-features = ["core"]

[[example]]
name = "xrechnung"
required-features = ["xrechnung"]

[[example]]
name = "zugferd"
required-features = ["zugferd"]

[[example]]
name = "datev_export"
required-features = ["datev"]

[[example]]
name = "validation"
required-features = ["xrechnung"]

[[example]]
name = "gdpdu_export"
required-features = ["gdpdu"]

[[example]]
name = "vat_check"
required-features = ["vat"]

[[example]]
name = "peppol_invoice"
required-features = ["peppol"]

[[example]]
name = "error_handling"
required-features = ["xrechnung"]

[[bench]]
name = "invoice_bench"
harness = false
required-features = ["all"]
